# egui-trace

./: .gitmodules  CODEOWNERS  Cargo.toml  README.md  build.rs  traces.txt
.github/workflows/: build.yaml  release.yml
crates/app/: Cargo.toml
crates/app/src/: attributes.rs  collector.rs  lib.rs  list.rs  settings.rs  waterfall.rs
crates/lib/: Cargo.toml
crates/lib/opentelemetry-proto/opentelemetry/proto/trace/v1/: trace.proto
crates/lib/src/: lib.rs  otel.rs
crates/lib/src/collector/: mod.rs
src/: attributes.rs  lib.rs  list.rs  main.rs  otel.rs  trace.rs  waterfall.rs
src/collector/: mod.rs  panel.rs  server.rs
